kubernetes/gateway-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\PROGRAMDATA\CHOCOLATEY\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose-eks.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway-server
  name: gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\PROGRAMDATA\CHOCOLATEY\lib\kubernetes-kompose\tools\kompose.exe
          convert -f docker-compose-eks.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: gateway-server
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: docker
        image: micro/gateway-server:0.0.1-SNAPSHOT
        imagePullPolicy: ""
        name: gateway-server
        ports:
        - containerPort: 8072
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
