kubernetes/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\PROGRAMDATA\CHOCOLATEY\lib\kubernetes-kompose\tools\kompose.exe
      --file ../docker-compose-eks.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  ports:
  - name: "8071"
    port: 8071
    targetPort: 8071
  selector:
    io.kompose.service: config-server
status:
  loadBalancer: {}
