kubernetes/customers-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\PROGRAMDATA\CHOCOLATEY\lib\kubernetes-kompose\tools\kompose.exe
      convert -f docker-compose-eks.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: customers-service
  name: customers-service
spec:
  ports:
  - name: "8073"
    port: 8073
    targetPort: 8073
  selector:
    io.kompose.service: customers-service
status:
  loadBalancer: {}
