kubernetes/eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\PROGRAMDATA\CHOCOLATEY\lib\kubernetes-kompose\tools\kompose.exe
      --file ../docker-compose-eks.yml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  type: NodePort
  ports:
    - port: 8070
      nodePort: 31070
  #- name: "8070"
    #targetPort: 8070
  selector:
    io.kompose.service: eureka-server
status:
  loadBalancer: {}
