kubernetes/logstash-endpoint.yaml
apiVersion: "v1"
kind: "Endpoints"
metadata:
  name: "logstash"
subsets:
  - addresses:
    - ip: "3.142.137.111"
    ports:
    - name: "logstash"
      port: 5000
